--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 
 GenesisProject/UserSettings/EditorUserSettings.asset
-
+GenesisProject/UserSettings/EditorUserSettings.asset
+GenesisProject/UserSettings/EditorUserSettings.asset
